--- a/src/templates/components/note.html
+++ b/src/templates/components/note.html
@@ -1,5 +1,10 @@
 <div class="card">
-  <h3 class="card-title">{title}</h3>
+  <div class="card-title-container">
+    <h3 class="card-title">{title}</h3>
+    <button class="card-delete-btn">
+      <img class="card-delete-icon" src="static/img/icons/trash.svg" alt="Delete note.">
+    </button>
+  </div>
   <div class="card-content">
     <p>{details}</p>
   </div>
