--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -44,5 +44,6 @@
     </main>
 
     <script type="text/javascript" src="static/js/getit.js"></script>
+    <script type="text/javascript" src="static/js/notes.js"></script>
   </body>
 </html>
