Replace <img> for <svg>

--- a/src/static/css/getit.css
+++ b/src/static/css/getit.css
@@ -220,10 +220,21 @@ Algumas informações úteis e dicas:
   background-color: inherit;
   border: none;
   padding: 0;
+  width: 1.5rem;
+  height: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .card-delete-btn:hover {
   cursor: pointer;
+  background-color: #ef4444;
+  color: white;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  border-radius: 9999px;
 }
  
  
