--- a/src/templates/components/note.html
+++ b/src/templates/components/note.html
@@ -2,7 +2,8 @@
   <div class="card-title-container">
     <h3 class="card-title">{title}</h3>
     <button class="card-delete-btn" onclick="deleteNote({note_id});">
-      <img class="card-delete-icon" src="static/img/icons/trash.svg" alt="Delete note.">
+      <!-- <img class="card-delete-icon" src="static/img/icons/trash.svg" alt="Delete note."> -->
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-trash-2"><path d="M3 6h18"/><path d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"/><path d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"/><line x1="10" x2="10" y1="11" y2="17"/><line x1="14" x2="14" y1="11" y2="17"/></svg>
     </button>
   </div>
   <div class="card-content">
