Add new page for editing notes, missing backend integration

--- a/src/static/css/getit.css
+++ b/src/static/css/getit.css
@@ -109,6 +109,10 @@ Algumas informações úteis e dicas:
  
    box-shadow: 0px 8px 15px 0px rgba(0,0,0,0.35);
  }
+
+ .form-card-tight {
+  margin-top: 0.5rem;
+ }
  
  .form-card-title, .autoresize {
    border: none;
@@ -269,6 +273,26 @@ Algumas informações úteis e dicas:
 
 .form-wrapper {
   padding: 0 1rem;
+}
+
+.back-btn-wrapper {
+  max-width: 32rem;
+  margin: auto;
+  padding: 0.75rem;
+  margin-top: 2rem;
+}
+
+.back-btn {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+  color: #292524;
+  font-size: 0.875rem;
+}
+
+.back-btn:hover {
+  color: rgba(41, 37, 36, 0.7)
 }
  
  
