Fetch note metadata in edit page

--- a/src/templates/components/note.html
+++ b/src/templates/components/note.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" data-note-id="{note_id}">
   <div class="card-title-container">
     <h3 class="card-title">{title}</h3>
     <div class="card-actions-container">
