--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -51,7 +51,7 @@
     <script type="text/javascript" src="/static/js/getit.js"></script>
     <script type="text/javascript" src="/static/js/edit.js"></script>
     <script>
-      hey({note_id})
+      fetchNote({note_id})
     </script>
   </body>
 </html>
