Update edit page to only load form when note is successfully fetched

--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -31,7 +31,7 @@
             <span>Voltar</span>
           </a>
         </div>
-        <form method="post" class="form-card form-card-tight">
+        <!-- <form method="post" class="form-card form-card-tight">
           <input
             class="form-card-title"
             type="text"
@@ -44,7 +44,7 @@
             placeholder="Digite o conteúdo..."
           ></textarea>
           <button class="btn" type="submit">Editar</button>
-        </form>
+        </form> -->
       </div>
     </main>
 
