Fix query parameter extraction

--- a/src/static/css/getit.css
+++ b/src/static/css/getit.css
@@ -213,6 +213,18 @@ Algumas informações úteis e dicas:
 
  .card-title {
   font-size: 1.25rem;
+  overflow: scroll;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.card-title::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.card-title {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 .card-delete-icon {
