--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -37,6 +37,15 @@
             name="detalhes"
             placeholder="Digite o conteúdo..."
           ></textarea>
+          <div class="color-picker-container">
+              <fieldset>
+                  <input class="color-picker-radio card-color-4" type="radio" name="color" value="yellow" checked />
+                  <input class="color-picker-radio card-color-1" type="radio" name="color" value="brown" />
+                  <input class="color-picker-radio card-color-2" type="radio" name="color" value="blue" />
+                  <input class="color-picker-radio card-color-3" type="radio" name="color" value="pink" />
+                  <input class="color-picker-radio card-color-5" type="radio" name="color" value="green" />
+              </fieldset>
+          </div>
           <button class="btn" type="submit">Criar</button>
         </form>
       </div>
